# pytheo

./: .gitignore  LICENSE  README.md  pyproject.toml  pytheo.yml
examples/: MgO.poscar  cstdn.py  custodian.py  input_testing.py  random.vasp  random_sorted.vasp  random_tst.py  relax.py  sqs_tst.py
examples/MgO_unitcell/: INCAR  POSCAR  POTCAR  submitvasp
examples/random/: INCAR  POSCAR  POSCAR_pristine  XDATCAR  cstdn.py  submitvasp
examples/relax/: INCAR  KPOINTS  POSCAR  POTCAR  submitvasp
src/pytheo/: structure.py  tst.py  utils.py
src/pytheo/dft/: README.md  inputs.py  modifiers.py
src/pytheo/dft/incar_defaults/: pbe.yaml  r2scan.yaml
src/pytheo/dft/magnetic_orders/: perovskite_cubic_afmA.yaml  perovskite_ortho_afmA.yaml  perovskite_ortho_afmC.yaml  rocksalt_prim_afmG.yaml
src/pytheo/mlip/: chgnet.py
src/pytheo/structure/: analysis.py  generation.py
src/pytheo/vasp/: analysis.py  inputs.py  outputs.py
src/pytheo/vasp/incar_defaults/: pbe.yaml  r2scan.yaml
src/pytheo/vasp/magnetic_orders/: README.md  perovskite_cubic_afmC.yaml  perovskite_cubic_afmG.yaml  perovskite_ortho_afmG.yaml  tst_loading_yaml.py
